--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,18 @@
+/* Стили для скроллбара */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--tui-primary);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--tui-base-03);
+}
+
 /* You can add global styles to this file, and also import other style files */
 :root {
   --tui-background-base: #d9d9d9;
