--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -46,7 +46,7 @@
         </tui-pagination>
       </div>
       }
-      <button tuiButton size="m" type="button">Создать отчет</button>
+      <button tuiButton size="m" (click)="reportClick()" type="button">Создать отчет</button>
     </div>
   </div>
   <div class="office-image">
