--- a/frontend/src/app/pages/registration/registration.component.html
+++ b/frontend/src/app/pages/registration/registration.component.html
@@ -22,7 +22,7 @@
       Пароль:
       <input tuiTextfieldLegacy type="password" />
     </tui-input>
-    <tui-select class="H2 MP-SB custom-input" formControlName="role">
+    <tui-select class="H2 MP-SB custom-input" formControlName="isAdmin">
       Роль:
       <tui-data-list-wrapper *tuiDataList [items]="items" />
     </tui-select>
